--- a/A-Star.html
+++ b/A-Star.html
@@ -96,6 +96,7 @@
         <script>
             //自定义参数
             var size = 30;//单个网格的大小(px)
+            var imgSize = 80;//图片大小(px)
             var [blockX,blockY] = [20,20];//行列节点数
             var speed = 60;//播放速度
             var RenderStyle = {data:1,arrows:1,render:1};//可选项:'data','arrows'
@@ -144,6 +145,23 @@
                     mouse.y = y;
                 })
                 return mouse;
+            }
+            window.tools.getKey = function(){
+                var key = {};
+                window.addEventListener('keydown',(e)=>{
+                    if(e.keyCode == 38 || e.keyCode == 87){
+                        key.direction = "up";
+                    }else if(e.keyCode == 39 || e.keyCode == 68){
+                        key.direction = "right";
+                    }else if(e.keyCode == 40 || e.keyCode == 83){
+                        key.direction = "down";
+                    }else if(e.keyCode == 37 || e.keyCode == 65){
+                        key.direction = "left";
+                    }else{
+                        key.direction = "";
+                    }
+                }, false);
+                return key;
             }
 
             function clickBegin(){//点击开始按钮
@@ -204,26 +222,52 @@
             }
 
             class Screen{
+                constructor(){
+                    this.imgURL={
+                        'sovhtnk_Left':'./image/sovhtnk_Left.png',
+                        'sovhtnk_Leftup':'./image/sovhtnk_Leftup.png',
+                        'sovhtnk_Leftdown':'./image/sovhtnk_Leftdown.png',
+                        'sovhtnk_Right':'./image/sovhtnk_Right.png',
+                        'sovhtnk_Rightup':'./image/sovhtnk_Rightup.png',
+                        'sovhtnk_Rightdown':'./image/sovhtnk_Rightdown.png',
+                        'sovhtnk_Up':'./image/sovhtnk_Up.png',
+                        'sovhtnk_Down':'./image/sovhtnk_Down.png',
+                    }
+                    for(let key in this.imgURL){
+                        let src = this.imgURL[key];
+                        this.imgURL[key] = new Image();
+                        let value = this.imgURL[key];
+                        value.src = src;
+                        value.onload = () =>{
+                        }
+                    }
+                }
 
                 screenUpdate(){
-                    if(openList.length!=0){
-                        newOpenList = openList.slice();
-                        let minFnode = openList[0];
-                        let minF = minFnode.F;
-                        for(let i in openList){
-                            if(openList[i].F<minF){
-                                minFnode = openList[i];
-                                minF = openList[i].F;
+                    if(PROJECTSTATES == 'containue'){
+                        if(openList.length!=0){
+                            newOpenList = openList.slice();
+                            let minFnode = openList[0];
+                            let minF = minFnode.F;
+                            for(let i in openList){
+                                if(openList[i].F<minF){
+                                    minFnode = openList[i];
+                                    minF = openList[i].F;
+                                }
                             }
+                            minFnode.searchSurroundings();
+                            openList = newOpenList;
+                        }else if(openList.length==0&&PROJECTSTATES=='containue'&&StartNode!=null){
+                            openList.push(StartNode);
                         }
-                        minFnode.searchSurroundings();
-                        openList = newOpenList;
-                    }else if(openList.length==0&&PROJECTSTATES=='containue'&&StartNode!=null){
-                        openList.push(StartNode);
                     }
+
+                    tank.update();
 
                     if(PROJECTSTATES == 'success'){
                         this.createAlignment();
+                        tank.alignment = Alignment.slice();
+                        PROJECTSTATES = 'start';
                     }
                     print('Update OK!')
                 }
@@ -247,6 +291,8 @@
                         }
                     }
 
+                    tank.render();
+
                     if(PROJECTSTATES == 'success'){
                         this.drawAlignment(Alignment);
                     }                 
@@ -262,6 +308,7 @@
                         }
                         thisNode = thisNode.parentNode;
                     }
+                    Alignment.reverse();
                 }
 
                 drawAlignment(alignment){//画出从起点到终点的路径
@@ -417,22 +464,22 @@
                     switch(this.state){//根据不同的网格状态选择不同的样式
                         case 'startPoint':{
                             ctx.fillStyle = '#00FF00';
-                            ctx.fillRect(this.x*this.size,this.y*this.size,this.size,this.size);
+                            ctx.fillRect(this.x*size,this.y*size,size,size);
                             break;
                         }
                         case 'destination':{
                             ctx.fillStyle = '#FF0000';
-                            ctx.fillRect(this.x*this.size,this.y*this.size,this.size,this.size);
+                            ctx.fillRect(this.x*size,this.y*size,size,size);
                             break;
                         }
                         case 'wall':{
                             ctx.fillStyle = '#000088';
-                            ctx.fillRect(this.x*this.size,this.y*this.size,this.size,this.size);
+                            ctx.fillRect(this.x*size,this.y*size,size,size);
                             break;
                         }
                         case 'road':{
                             ctx.fillStyle = '#DDCC00';
-                            ctx.fillRect(this.x*this.size,this.y*this.size,this.size,this.size);
+                            ctx.fillRect(this.x*size,this.y*size,size,size);
                             break;
                         }
                         default:{
@@ -442,7 +489,7 @@
 
                     //绘制边框
                     ctx.strokeStyle = '#000000';
-                    ctx.strokeRect(this.x*this.size,this.y*this.size,this.size,this.size);
+                    ctx.strokeRect(this.x*size,this.y*size,size,size);
                     
                     //绘制箭头
                     if(RenderStyle.arrows&&(this.parentNode != null)){
@@ -450,8 +497,8 @@
                         let offSetX = rate*(this.x-this.parentNode.x);
                         let offSetY = rate*(this.y-this.parentNode.y);
                         ctx.beginPath();
-                        ctx.moveTo((this.x+0.5-offSetX)*this.size,(this.y+0.5-offSetY)*this.size);
-                        ctx.lineTo((this.x+0.5+offSetX)*this.size,(this.y+0.5+offSetY)*this.size);
+                        ctx.moveTo((this.x+0.5-offSetX)*size,(this.y+0.5-offSetY)*size);
+                        ctx.lineTo((this.x+0.5+offSetX)*size,(this.y+0.5+offSetY)*size);
                         ctx.stroke();
                     }
 
@@ -460,11 +507,11 @@
                         let fontSize = Math.floor(size/3);
                         ctx.font = fontSize+'px Arial';
                         ctx.fillStyle = '#00FF00';
-                        ctx.fillText(this.G,this.x*this.size,this.y*this.size+fontSize);
+                        ctx.fillText(this.G,this.x*size,this.y*size+fontSize);
                         ctx.fillStyle = '#00FFFF';
-                        ctx.fillText(this.H,(this.x+0.5)*this.size,this.y*this.size+fontSize);
+                        ctx.fillText(this.H,(this.x+0.5)*size,this.y*size+fontSize);
                         ctx.fillStyle = '#FFFFFF';
-                        ctx.fillText(this.F,this.x*this.size,(this.y+0.5)*this.size+fontSize);
+                        ctx.fillText(this.F,this.x*size,(this.y+0.5)*size+fontSize);
                     }
                 }
             }
@@ -472,30 +519,101 @@
             class Player{
 
                 constructor(x,y){
-                    this.x = x;
-                    this.y = y;
+                    this.pos_x = x;
+                    this.pos_y = y;
                     this.towards = 'left';
-                    this.speed = 1;
+                    this.speed = 2;
+                    this.image = screen.imgURL['sovhtnk_Right'];
                     this.alignment = null;
                 }
 
                 update(){
-                    if(this.alignment != null){
+                    if(this.alignment != null&&this.alignment.length != 0){
+                        console.log(this.alignment);
+                        let Dx = (this.alignment[0].x+0.5)*size-this.pos_x;
+                        let Dy = (this.alignment[0].y+0.5)*size-this.pos_y;
+                        let dx = this.speed*Dx/Math.sqrt(Dx**2+Dy**2);
+                        let dy = this.speed*Dy/Math.sqrt(Dx**2+Dy**2);
+                        console.log(dx);
+                        if(dx<0){
+                            if(dy<0){
+                                this.image = screen.imgURL['sovhtnk_Leftup'];
+                            }
+                            if(dy==0){
+                                this.image = screen.imgURL['sovhtnk_Left'];
+                            }
+                            if(dy>0){
+                                this.image = screen.imgURL['sovhtnk_Leftdown'];
+                            }
+                        }else if(dx==0){
+                            if(dy<0){
+                                this.image = screen.imgURL['sovhtnk_Up'];
+                            }
+                            if(dy==0){}
+                            if(dy>0){
+                                this.image = screen.imgURL['sovhtnk_Down'];
+                            }
+                        }else if(dx>0){
+                            if(dy<0){
+                                this.image = screen.imgURL['sovhtnk_Rightup'];
+                            }
+                            if(dy==0){
+                                this.image = screen.imgURL['sovhtnk_Right'];
+                            }
+                            if(dy>0){
+                                this.image = screen.imgURL['sovhtnk_Rightdown'];
+                            }
+                        }
+
+                        if((dx**2+dy**2)<(Dx**2+Dy**2)){
+                            this.pos_x += dx;
+                            this.pos_y += dy;
+                        }else{
+                            this.pos_x = (this.alignment[0].x+0.5)*size;
+                            this.pos_y = (this.alignment[0].y+0.5)*size;
+                            this.alignment.splice(0,1);
+                        }
                     }
                 }
 
                 render(){
+                    ctx.drawImage(this.image,this.pos_x-imgSize/2,this.pos_y-imgSize/2,imgSize,imgSize);
                 }
             }
 
             console.log('Sjkenterprise的计科导网页作业');
 
             var mouse = tools.getMouse(cnv);
+            var key = tools.getKey();
             cnv.addEventListener('mousedown',()=>{
                 let x = Math.floor(mouse.x/size);
                 let y = Math.floor(mouse.y/size);
                 if((x in blockArr)&&(y in blockArr[x])){
                     blockArr[x][y].onMouseClick();
+                }
+            })
+            window.addEventListener('keydown',(e)=>{
+                switch(key.direction){
+                    case 'up':{
+                        tank.image = screen.imgURL['sovhtnk_Up'];
+                        tank.pos_y+=-tank.speed;
+                        break;
+                    }
+                    case 'down':{
+                        tank.image = screen.imgURL['sovhtnk_Down'];
+                        tank.pos_y+=tank.speed;
+                        break;
+                    }
+                    case 'left':{
+                        tank.image = screen.imgURL['sovhtnk_Left'];
+                        tank.pos_x+=-tank.speed;
+                        break;
+                    }
+                    case 'right':{
+                        tank.image = screen.imgURL['sovhtnk_Right'];
+                        tank.pos_x+=tank.speed;
+                        break;
+                    }
                 }
             })
 
@@ -507,6 +625,7 @@
             }
 
             screen = new Screen();
+            tank = new Player(2,2);
 
             setInterval(()=>{
                 startTime = new Date().getTime();
@@ -514,9 +633,9 @@
                     //清空
                     ctx.clearRect(0,0,cnv.width,cnv.height);
                     //更新
-                    if(PROJECTSTATES=='containue'){
+                    //if(PROJECTSTATES=='containue'){
                         screen.screenUpdate();
-                    }
+                    //}
                     //渲染
                     screen.screenRender();
                 }
